--- a/FRONTEND/work.html
+++ b/FRONTEND/work.html
@@ -25,7 +25,7 @@
 
 
     <h3>work</h3>
-    <h4>this is my photo that are nice & that are on my gram @ JJOWENTlY (FREE PlUG)</h4>
+    <h4>This is my photo that are nice & that are on my gram <a href="https://www.instagram.com/jjowently/?hl=nl" target="_blank"><br>@ jjowently</a> </h4>
     <section>
 
 
