Final Changes  voor beoordeling

--- a/FRONTEND/contact.html
+++ b/FRONTEND/contact.html
@@ -22,42 +22,30 @@
             </ul>
         </nav>
     </header>
-    <div>
-        <form action="">
-            <fieldset>
-                <legend>Gegevens</legend>
-                <label for="name">Voornaam</label>
-                <input required type="text">
 
-                <label for="surname">Achternaam</label>
-                <input required type="text">
+    <form action="">
+        <fieldset>
+            <legend>CONTACT</legend>
+            <label for="name">Voornaam</label>
+            <input required type="text">
 
-                <label for="email">E-mail</label>
-                <input required type="email" placeholder="example@hotmail.com">
+            <label for="surname">Achternaam</label>
+            <input required type="text">
 
-                <p class="feedback">Je hebt dit gedeelte van de formulier Flawless ingevuld Topper! </p>
+            <label for="email">E-mail</label>
+            <input required type="email" placeholder="example@hotmail.com">
 
-            </fieldset>
+            <select name="dream car">
+            <option value="Lamborgini">Lamborgini</option>
+            <option value="McLaren">Mc Laren</option>
+            <option value="Bugatti">Bugatti</option>
+            <option value="Royce Rolls">Royce Rolls</option>
+    </select>
+        </fieldset>
 
-            <fieldset>
-                <legend>Gegevens</legend>
-                <label for="name">Voornaam</label>
-                <input required type="text">
+        <button>Verstuur</button>
+    </form>
 
-                <label for="surname">Achternaam</label>
-                <input required type="text">
-
-                <label for="email">E-mail</label>
-                <input required type="email" placeholder="example@hotmail.com">
-
-                <p class="feedback">Je hebt dit gedeelte van de formulier Flawless ingevuld Topper! </p>
-
-            </fieldset>
-
-
-            <button>Verstuur</button>
-        </form>
-    </div>
     <script src="script.js"></script>
 </body>
 
