--- a/FRONTEND/birdinsteadofplane.html
+++ b/FRONTEND/birdinsteadofplane.html
@@ -9,11 +9,32 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href=""><img src="CSS/LOGO/JowentlyWatermerkFinal.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="about.html">about me</a>
+                </li>
+                <li>
+                    <a href="work.html">work</a>
+                </li>
+                <li>
+                    <a href="contact.html">contact</a>
+                </li>
+
+
+            </ul>
+        </nav>
+    </header>
 
     <main>
-        <h1>Birds Instead Of Planes</h1>
-        <p>The story behind this scene sounds like this. After I met my cousin I grabbed my phone I searched for plane spotter location. That day I really wanted to capture some plane in action you know planes landing hitting that brake so you see the smoke or just planes taking off the airport. Sadly, that day no plane landed near the spotter that I was. So, I looked around and I saw allot of black birds walking around so I started taking photos of them to at least have some content. I was taking picture of birds flying, eating, spreading wings, hiding in plants all kind of sort of pictures.</p>
+
         <img src="CSS/IMG/DSC_0678-2.jpg" alt="">
+        <p>The story behind this scene sounds like this. After I met my cousin I grabbed my phone I searched for plane spotter location. That day I really wanted to capture some plane in action you know planes landing hitting that brake so you see the smoke or just planes taking off the airport. Sadly, that day no plane landed near the spotter that I was. So, I looked around and I saw allot of black birds walking around so I started taking photos of them to at least have some content. I was taking picture of birds flying, eating, spreading wings, hiding in plants all kind of sort of pictures.</p>
+
     </main>
 </body>
 
