--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Yes</title>
+    <title>My Journey of Photography</title>
     <link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,9 +32,8 @@
     </header>
 
     <h1>Starting my Journey of Photography</h1>
-    <div>
-        <p>Hi there my name is Jowently Josephina. You may think this is my portfolio but no it isn’t. I’m 22 years old. I’m currently in my fourth and last year of communication multimedia & Design. This website is just so I can practice my coding which I’m very bad in coding stuff. My problem is that I understand it but writing it from scratch. But that’s alright because I’m taking classes for coding. The main content of this website will be photography. Since a couple of months ago I bought my self a camera. A Nikon D5300 with 2 lenses it was more of an investment and something new. I never and still didn’t take any kind of classes of photography so I had to do my own research. It all started from thinking of buying a GoPro to buy a DSLR camera. </p>
-    </div>
+
+    <p>Hi there my name is Jowently Josephina. You may think this is my portfolio but no it isn’t. I’m 22 years old. I’m currently in my fourth and last year of communication multimedia & Design. This website is just so I can practice my coding which I’m very bad in coding stuff. My problem is that I understand it but writing it from scratch. But that’s alright because I’m taking classes for coding. The main content of this website will be photography. Since a couple of months ago I bought my self a camera. A Nikon D5300 with 2 lenses it was more of an investment and something new. I never and still didn’t take any kind of classes of photography so I had to do my own research. It all started from thinking of buying a GoPro to buy a DSLR camera. </p>
 
     <section>
 
@@ -42,14 +41,6 @@
             <p>Bird instead of Plane</p>
             <a href="birdinsteadofplane.html"><img src="CSS/IMG/DSC_0678.jpg" alt=""></a>
         </article>
-
-
-        <!--
-        <article>
-            <p>Rosa</p>
-            <a href=""><img src="CSS/IMG/DSC_0770.jpg" alt=""></a>
-        </article>
--->
 
         <article>
             <p>Follow your F*vk!ng Gut</p>
